# rust

./: README.md
calculator_gui/: Cargo.toml
calculator_gui/src/: main.rs
calculatorcmd/: Cargo.toml
calculatorcmd/src/: main.rs
first_unique_letter_string/: Cargo.toml
first_unique_letter_string/src/: main.rs
prime_numbers/: Cargo.toml
prime_numbers/src/: main.rs
todo/: Cargo.toml
todo/src/: main.rs
todo2/: Cargo.toml
todo2/src/: main.rs
window/: Cargo.toml  pepe.htm
window/src/: main.rs
window/ui/: appwindow.slint
