[package]
name = "window"
version = "0.1.0"
authors = ["vertigo.filip <44265838+vertigofilip@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
